--- a/CreateTest/templates/CreateTest/dashboard.html
+++ b/CreateTest/templates/CreateTest/dashboard.html
@@ -8,7 +8,7 @@
 <div class="card px-0 border-0">
     <ul class="list-group list-group-flush">
         <li class="list-group-item text-right p-1">
-            <a href="{% url 'create:info' %}" class=" btn btn-success mx-2">EDIT</a>
+            {% comment %} <a href="{% url 'create:info' %}" class=" btn btn-success mx-2">EDIT</a> {% endcomment %}
         </li>
         <li class="list-group-item"><div class="row">
             <div class="col-md-3 pl-2 my-auto"><div class="card-title text-muted my-auto h6 text-uppercase">Judul Tes</div></div>
