--- a/Test/templates/Test/verifyAnswer.html
+++ b/Test/templates/Test/verifyAnswer.html
@@ -150,11 +150,11 @@ KONFIRMASI IDENTITAS DAN JAWABAN
   </main>  
     <script>
         form = document.getElementsByTagName('form')[0] 
-        now = {{timeNow |date:"U"}} 
-        setInterval(() => {
-            makeTimer(({{takerQuery.timeStart |date:"U"}}+{{takerQuery.timeLimit}}*60),now,'.time',() =>  { form.submit()})
-            now += 1
-        }, 1000)
+        // now = {{timeNow |date:"U"}} 
+        // setInterval(() => {
+        //     makeTimer(({{takerQuery.timeStart |date:"U"}}+{{takerQuery.timeLimit}}*60),now,'.time',() =>  { form.submit()})
+        //     now += 1
+        // }, 1000)
         var _0x153f=['2XgPUXH','2269VaSRsM','90KXJmRv','172nJIhbI','23176EoJDRN','7gKsnEe','form','492257NETfGS','565901Fmqgpy','68cNLNni','submit','73867beFZiS','556321PHHyYF','2487XEIprA','.time'];function _0x10b8(_0x1790de,_0x3a79ea){return _0x10b8=function(_0x153fd5,_0x10b8f7){_0x153fd5=_0x153fd5-0x1e7;var _0x9a0d3f=_0x153f[_0x153fd5];return _0x9a0d3f;},_0x10b8(_0x1790de,_0x3a79ea);}(function(_0x54b070,_0x328a3e){var _0x28a810=_0x10b8;while(!![]){try{var _0x6e8922=parseInt(_0x28a810(0x1ec))*-parseInt(_0x28a810(0x1f3))+parseInt(_0x28a810(0x1f2))*-parseInt(_0x28a810(0x1eb))+parseInt(_0x28a810(0x1ee))*-parseInt(_0x28a810(0x1e8))+parseInt(_0x28a810(0x1ea))+-parseInt(_0x28a810(0x1f0))*-parseInt(_0x28a810(0x1f5))+-parseInt(_0x28a810(0x1ef))+parseInt(_0x28a810(0x1f4))*parseInt(_0x28a810(0x1e7));if(_0x6e8922===_0x328a3e)break;else _0x54b070['push'](_0x54b070['shift']());}catch(_0x42a528){_0x54b070['push'](_0x54b070['shift']());}}}(_0x153f,0x9dce9),function(){var _0x293c91=_0x10b8;form=document['getElementsByTagName'](_0x293c91(0x1e9))[0x0],now={{timeNow |date:"U"}} ,setInterval(()=>{var _0xc2b130=_0x293c91;makeTimer({{takerQuery.timeStart |date:"U"}}+{{takerQuery.timeLimit}}*0x3c,now,_0xc2b130(0x1f1),()=>{var _0x359fef=_0xc2b130;form[_0x359fef(0x1ed)]();}),now+=0x1;},0x3e8);}());
     </script>    
 {% endblock no_container %}
